# MyCOM-Viewer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.txt  THIRD_PARTY_NOTICES.md  run_mycom_viewer.sh
cmake/: CPack.distribution.dist.in  DeployMacQtRuntime.cmake.in  DeployQtRuntime.cmake.in
packaging/linux/: build-and-package.sh  mycom-viewer.desktop
packaging/macos/: Info.plist.in  build-and-test.sh
packaging/windows/: build-and-test.cmd  installer.nsi  mycom-viewer.manifest  mycom-viewer.rc.in
resources/: app.qrc
scripts/dev/: run_mycom_viewer.sh
src/: archive_manifest.cpp  archive_manifest.h  archive_manifest_test.cpp  archive_tool_locator.cpp  archive_tool_locator.h  archive_tool_locator_test.cpp  bookmark_store.cpp  bookmark_store.h  bookmark_store_test.cpp  iso9660_extractor.cpp  iso9660_extractor.h  iso9660_extractor_test.cpp  main.cpp  viewer_main.cpp
tests/: archive_iso_integration.cmake
